# mockcpp_vcpkg

./: .gitignore  BuildGuide  CMakeLists.txt  Makefile  ProjectVar.txt  README  README.md  build_install.sh  mockcpp-config.cmake.in
include/mockcpp/: ApiHookFunctor.h  IgnoreResultHandlerFactory.h  ReportFailure.h  ResultHandlerFactory.h  mockcpp.h
src/: CMakeLists.txt  generate_vtbl_related_files.py  get_long_opt.py
src/ports/failure/: gtest_report_failure.cpp
